# cpp

./: .clang-format  .gitignore  LICENSE  README.md  cpp.code-workspace
challenge_section_12/: CMakeLists.txt  main.cpp  main.hpp
challenge_section_4/: CMakeLists.txt  main.cpp
challenge_section_5/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp
challenge_section_6/: CMakeLists.txt  task1.cpp  task2.cpp
challenge_section_7/: main.cpp
challenge_section_8/: main.cpp
kata_1/: CMakeLists.txt  main.cpp  no_space.cpp  no_space.h
kata_2/: CMakeLists.txt  is_prime_number.cpp  is_prime_number.hpp  main.cpp
kata_3/: CMakeLists.txt  main.cpp  reverse_words.cpp  reverse_words.h
section_10_assignment/: CMakeLists.txt  main.cpp
